# Copyright 2021 Lawrence Livermore National Security, LLC and other Privateer Project Developers.
# See the top-level LICENSE file for details.
#
# SPDX-License-Identifier: MIT

add_subdirectory(privateer_sort)
# add_subdirectory(random_sparse_update)
# add_subdirectory(test_writes)
add_subdirectory(snapshot_basic_test)
# add_subdirectory(incremental_update_snapshot)
add_subdirectory(concurrent_update)
